--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "loader": "^2.1.1",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
+    "popper.js": "^1.14.7",
     "raw": "^0.1.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
